--- a/OyoRooms/package.json
+++ b/OyoRooms/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^7.6.12",
     "gapi-script": "^1.2.0",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
